[gd_scene load_steps=2 format=2]

[ext_resource path="res://TestLoadPck.gd" type="Script" id=1]

[node name="TestLoadPck" type="Node2D"]
script = ExtResource( 1 )

[node name="Prompt" type="TextEdit" parent="."]
margin_left = 88.0
margin_top = 60.0
margin_right = 516.0
margin_bottom = 137.0
rect_scale = Vector2( 2, 2 )
text = "ProjectSettings do not update when a new resource pack is loaded.  We can work around this by keeping track of important data (like a version number) in the \"user://\" directory space."
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhatVersion" type="TextEdit" parent="."]
margin_left = 306.0
margin_top = 283.0
margin_right = 411.0
margin_bottom = 318.0
rect_scale = Vector2( 4, 4 )
text = "This is v_._._"
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitToLoad" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="timeout" from="WaitToLoad" to="." method="_on_WaitToLoad_timeout"]
